@@ -15,6 +15,7 @@ exports.version = [0, 8, 1];
 exports.run = run;
 exports.createServer = createServer;
 exports.env = makeEnv;
+exports.call = call;
 exports.handleError = handleError;
 exports.Error = UserError;
 exports.InvalidRequestBodyError = InvalidRequestBodyError;
@@ -110,7 +111,7 @@ function createServer(app, opts) {
         console.log(msg);
     });
 
-    server.on("request", function handleRequest(req, res) {
+    server.on("request", function (req, res) {
         var uri = url.parse(req.url);
         var env = makeEnv({
             protocol: protocol,
@@ -128,8 +129,7 @@ function createServer(app, opts) {
             error: process.stderr
         });
 
-        // Call the app.
-        app(env, function handleResponse(status, headers, body) {
+        call(app, env, function (status, headers, body) {
             var isEmpty = env.requestMethod == "HEAD" || utils.emptyBody(status);
             var isStream = typeof body != "string";
 
@@ -219,6 +219,22 @@ function makeEnv(opts) {
     env.strataVersion = exports.version;
 
     return env;
+}
+
+/**
+ * Calls the given `app` with the given `env` and `callback`. If any error is
+ * thrown synchronously, it is caught and passed to `handleError`.
+ *
+ * IMPORTANT: This does not handle errors that are thrown inside a callback. Any
+ * error that occurs inside a callback should pass that object as the first
+ * argument to the caller.
+ */
+function call(app, env, callback) {
+    try {
+        app(env, callback);
+    } catch (err) {
+        handleError(err, env, callback);
+    }
 }
 
 /**
