@@ -42,7 +42,7 @@ function makeEnv(opts) {
  * body is a stream, it is buffered before being passed to the callback.
  */
 function call(app, env, callback) {
-    app(env, function (status, headers, body) {
+    strata.call(app, env, function (status, headers, body) {
         var isEmpty = env.requestMethod == "HEAD" || utils.emptyBody(status);
 
         if (isEmpty) {
